k8s/conversations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: conversations
  name: conversations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversations
  template:
    metadata:
      labels:
        app: conversations
    spec:
      containers:
      - image: darbata1/rtc-conversations:latest
        imagePullPolicy: IfNotPresent
        name: real-time-chat-conversations
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi

        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 30

        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 15"] # let current connections drain

      terminationGracePeriodSeconds: 45
