k8s/dispatcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dispatcher
  name: dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
      - image: realtime/dispatcher
        imagePullPolicy: IfNotPresent
        name: real-time-chat-dispatcher
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi

        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 30

        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 15"] # let current connections drain

      terminationGracePeriodSeconds: 45
