k8s/dynamodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dynamodb
spec:
  serviceName: dynamodb
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local:latest
          args: ["-jar", "DynamoDBLocal.jar", "-sharedDb", "-dbPath", "/data"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data

          readinessProbe:
            tcpSocket: { port: 8000 }
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 8000 }
            periodSeconds: 10

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
