k8s/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  clusterIP: None
  selector:
    app: broker
  ports:
    - name: amqp
      port: 5672
    - name: management
      port: 15672
    - name: stomp
      port: 61613
