k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat
  name: chat
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: chat
  type: ClusterIP
