k8s/conversations-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: conversations
  name: conversations
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: conversations
  type: LoadBalancer
