k8s/dispatcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dispatcher
  name: dispatcher
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8080
  selector:
    app: dispatcher
  type: ClusterIP
