k8s/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
spec:
  clusterIP: None
  selector:
    app: dynamodb
  ports:
    - port: 8000
