k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: conversations-to-postgres
spec:
  podSelector: 
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: conversations
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dispatcher-to-dynamodb
spec:
  podSelector: 
    matchLabels:
      app: dynamodb
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: dispatcher
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broker-ingress
spec:
  podSelector: 
    matchLabels:
      app: broker
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: conversations
    - from:
      - podSelector:
          matchLabels:
            app: dispatcher
    - from:
      - podSelector:
          matchLabels:
            app: chat
    - from:
      - podSelector:
          matchLabels:
            job: broker-init
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chat-ingress
spec:
  podSelector: 
    matchLabels:
      app: chat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: conversations-ingress
spec:
  podSelector: 
    matchLabels:
      app: conversations
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
    - from:
        - podSelector:
            matchLabels:
              app: dispatcher
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dispatcher-ingress
spec:
  podSelector: 
    matchLabels:
      app: dispatcher
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: conversations
